changing reporter to use <pw> instead of <password> to match the other services; updating settings-tester.pl to match

--- a/Open-ILS/examples/opensrf.xml.example
+++ b/Open-ILS/examples/opensrf.xml.example
@@ -54,7 +54,7 @@ Example opensrf config file for OpenILS
                     <port>5432</port>
                     <db>evergreen</db>
                     <user>postgres</user>
-                    <password>postgres</password>
+                    <pw>postgres</pw>
                 </database>
                 <files>
                     <!-- successful report outputs go here -->
