--- a/Open-ILS/src/python/Makefile
+++ b/Open-ILS/src/python/Makefile
@@ -1,16 +1,22 @@
-# vim:noet:ts=4
+# makefile for OpenSRF Python modules and scripts
 
-install: python-install
-
-python-build:
+# ------------------------------------------------------------------------------
+# BUILD
+# ------------------------------------------------------------------------------
+build:
 	@echo $@
 	python setup.py build
 
-python-install:
+# ------------------------------------------------------------------------------
+# INSTALL
+# ------------------------------------------------------------------------------
+install:	build
 	@echo $@
 	python setup.py install
 
+# ------------------------------------------------------------------------------
+# CLEAN	
+# ------------------------------------------------------------------------------
 clean:
-	@echo $@
-	rm -fr build
-	find . -name "*.pyc" -exec rm -f {} \;
+	/bin/rm -rf build 
+
