Correct SetEnv syntax for XUL locale

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -108,7 +108,7 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
     allow from all
 
     # We only support one locale (en-US) for the time being
-    SetEnv locale=en-US
+    SetEnv locale en-US
 </LocationMatch>
 
 # ----------------------------------------------------------------------------------
