Start using locale SSI env to pull in DTD for XUL/XHTML Add include and XML entity parsing to XHTML files in /xul/ Localize a few more admin files

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -99,12 +99,12 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
 </LocationMatch>
 	
 # ----------------------------------------------------------------------------------
-# Run server-side XUL through xmlent to load the correct XML entities
+# Run server-side XUL and XHTML through xmlent to load the correct XML entities
 # ----------------------------------------------------------------------------------
-<LocationMatch /xul/.*\.xul$>
+<LocationMatch /xul/.*(\.xul|\.xhtml)$>
     Options +Includes
     XMLEntContentType "application/vnd.mozilla.xul+xml"
-    AddOutputFilter INCLUDES;XMLENT .xul
+    AddOutputFilter INCLUDES;XMLENT .xhtml .xul
     allow from all
 
     # We only support one locale (en-US) for the time being
