Correct install rules for the c-app headers

--- a/Open-ILS/src/c-apps/Makefile
+++ b/Open-ILS/src/c-apps/Makefile
@@ -55,7 +55,7 @@ install:
 	cp liboils_idl.so $(LIBDIR)/
 	cp oils_dataloader $(BINDIR)/
 	mkdir -p $(INCDIR)/
-	cp openils/*.h $(INCDIR)/
+	cp ../../include/openils/*.h $(INCDIR)/
 
 clean:
 	@echo $@;
