Do not force application type of XHTML files to XUL (wreaks havoc with javascript)

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -101,15 +101,25 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
 # ----------------------------------------------------------------------------------
 # Run server-side XUL and XHTML through xmlent to load the correct XML entities
 # ----------------------------------------------------------------------------------
-<LocationMatch /xul/.*(\.xul|\.xhtml)$>
+<LocationMatch /xul/.*\.xhtml$>
     Options +Includes
-    XMLEntContentType "application/vnd.mozilla.xul+xml"
-    AddOutputFilter INCLUDES;XMLENT .xhtml .xul
+    AddOutputFilter INCLUDES;XMLENT .xhtml
     allow from all
 
     # We only support one locale (en-US) for the time being
     SetEnv locale en-US
 </LocationMatch>
+
+<LocationMatch /xul/.*\.xul$>
+    Options +Includes
+    XMLEntContentType "application/vnd.mozilla.xul+xml"
+    AddOutputFilter INCLUDES;XMLENT .xul
+    allow from all
+
+    # We only support one locale (en-US) for the time being
+    SetEnv locale en-US
+</LocationMatch>
+
 
 # ----------------------------------------------------------------------------------
 # Supercat feeds
