Make "make clean" clean the staff_client directory as well

--- a/Open-ILS/src/Makefile
+++ b/Open-ILS/src/Makefile
@@ -10,7 +10,8 @@ export STAFF_CLIENT_BUILD_ID = `/bin/cat ../xul/staff_client/build/BUILD_ID`
 
 all:  c_apps client-xul mod_xmlent python-build
 
-install:	perl-install python-install web-install server-xul string-templates-install xsl-install c_apps-install circ_rules-install offline-install storage-bootstrap cgi-bootstrap
+#install:	perl-install python-install web-install server-xul string-templates-install xsl-install c_apps-install circ_rules-install offline-install storage-bootstrap cgi-bootstrap
+install:	perl-install python-install web-install server-xul string-templates-install xsl-install c_apps-install circ_rules-install offline-install cgi-bootstrap
 
 web-install:	webcore-install autojs-install mod_xmlent-install offline-install reporter-install
 
