updating the exporter config to add the proxy for staff

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -212,7 +212,10 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
 # ----------------------------------------------------------------------------------
 <Location /exporter>
     SetHandler perl-script
-    PerlHandler OpenILS::WWW::Exporter
+    PerlSetVar OILSProxyTitle "Exporter Login"
+    PerlSetVar OILSProxyDescription "Please log in to export records"
+    PerlSetVar OILSProxyPermissions "STAFF_LOGIN"
+    PerlHandler OpenILS::WWW::Proxy OpenILS::WWW::Exporter
     Options +ExecCGI
     allow from all
 </Location>
