adding SRU exmple stanza

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -159,6 +159,13 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
     PerlSendHeader On
     allow from all
 </Location>
+<Location /opac/extras/sru>
+    SetHandler perl-script
+    PerlHandler OpenILS::WWW::SuperCat::sru_search
+    Options +ExecCGI
+    PerlSendHeader On
+    allow from all
+</Location>
 <Location /opac/extras/feed/freshmeat>
     SetHandler perl-script
     PerlHandler OpenILS::WWW::SuperCat::changes_feed
